--- a/PT_Assistant_sergio/AndroidManifest.xml
+++ b/PT_Assistant_sergio/AndroidManifest.xml
@@ -3,13 +3,16 @@
     package="com.example.pt_assistant_sergio"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    <instrumentation android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="your.package"
+        android:label="your tests label" />
     <uses-sdk
        
         android:minSdkVersion="11"    
         android:targetSdkVersion="19" />
 
     <application
+       
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -34,7 +37,7 @@
                 android:value="com.example.pt_assistant_sergio.MainActivity" />
         </activity>
        
-       
+        <uses-library android:name="android.test.runner" />
 	  
 	   
        
