--- a/PT_Assistant/AndroidManifest.xml
+++ b/PT_Assistant/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"  >
         <activity
-            android:name="com.example.pt_assistant_sergio.MainActivity"
+            android:name="com.example.pt_assistant.MainActivity"
             android:label="@string/app_name" >
            
             <intent-filter>
@@ -29,9 +29,9 @@
         </activity>
         
         <activity
-            android:name="com.example.pt_assistant_sergio.DisplayMessageActivity"
+            android:name="com.example.pt_assistant.DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
-            android:parentActivityName="com.example.pt_assistant_sergio.MainActivity" >
+            android:parentActivityName="com.example.pt_assistant.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant_sergio.MainActivity" />
