--- a/PT_Assistant/AndroidManifest.xml
+++ b/PT_Assistant/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
        
         <activity
-            android:name="com.example.pt_assistant.RecordCreatedActivity"
+            android:name="com.example.pt_assistant.CreatedPatientActivity"
             android:label="@string/title_record_created_activity"
             android:parentActivityName="com.example.pt_assistant.MainActivity" >
             <meta-data
