--- a/PT_Assistant/AndroidManifest.xml
+++ b/PT_Assistant/AndroidManifest.xml
@@ -10,7 +10,7 @@
        
         android:minSdkVersion="11"    
         android:targetSdkVersion="19" />
-
+     <uses-permission android:name="android.permission.INTERNET"/>
     <application
        
         android:allowBackup="true"
@@ -38,7 +38,7 @@
         </activity>
        
         <activity
-            android:name="com.example.pt_assistant.CreatedPatientActivity"
+            android:name="com.example.pt_assistant.CreatePatientActivity"
             android:label="@string/title_record_created_activity"
             android:parentActivityName="com.example.pt_assistant.MainActivity" >
             <meta-data
