--- a/PT_Assistant/AndroidManifest.xml
+++ b/PT_Assistant/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
         
         <activity
-            android:name="com.example.pt_assistant.DisplayMessageActivity"
+            android:name="com.example.pt_assistant.GetPatientActivity"
             android:label="@string/title_activity_display_message"
             android:parentActivityName="com.example.pt_assistant.MainActivity" >
             <meta-data
