--- a/PT_Assistant/AndroidManifest.xml
+++ b/PT_Assistant/AndroidManifest.xml
@@ -3,31 +3,32 @@
     package="com.example.pt_assistant"
     android:versionCode="1"
     android:versionName="1.0" >
-    <instrumentation android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="com.example.pt_assistant"
-        android:label="Android JUnit TestCase" />
+
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:label="Android JUnit TestCase"
+        android:targetPackage="com.example.pt_assistant" />
+
     <uses-sdk
-       
-        android:minSdkVersion="11"    
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
-     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-       
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"  >
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
         <activity
             android:name="com.example.pt_assistant.MainActivity"
             android:label="@string/app_name" >
-           
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="com.example.pt_assistant.GetPatientActivity"
             android:label="@string/title_activity_display_message"
@@ -36,7 +37,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
-       
         <activity
             android:name="com.example.pt_assistant.CreatePatientActivity"
             android:label="@string/title_record_created_activity"
@@ -45,8 +45,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
-       
-      <activity
+        <activity
             android:name="com.example.pt_assistant.PatientListActivity"
             android:label="@string/pattient_list"
             android:parentActivityName="com.example.pt_assistant.MainActivity" >
@@ -54,11 +53,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
+
         <uses-library android:name="android.test.runner" />
-	  
-	   
-       
-	    
+
+        <activity
+            android:name="com.example.pt_assistant.TrendReportActivity"
+            android:label="@string/title_activity_trend_report" >
+        </activity>
     </application>
 
 </manifest>
