--- a/PT_Assistant/AndroidManifest.xml
+++ b/PT_Assistant/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.pt_assistant.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,25 +30,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".GetPatientActivity"
+            android:name="com.example.pt_assistant.GetPatientActivity"
             android:label="@string/title_activity_display_message"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.example.pt_assistant.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
         <activity
-            android:name=".CreatePatientActivity"
+            android:name="com.example.pt_assistant.CreatePatientActivity"
             android:label="@string/title_record_created_activity"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.example.pt_assistant.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
         <activity
-            android:name=".PatientListActivity"
+            android:name="com.example.pt_assistant.PatientListActivity"
             android:label="@string/pattient_list"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.example.pt_assistant.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
@@ -57,60 +57,70 @@
         <uses-library android:name="android.test.runner" />
 
         <activity
-            android:name=".TrendReportActivity"
+            android:name="com.example.pt_assistant.TrendReportActivity"
             android:label="@string/title_activity_trend_report" >
         </activity>
         <activity
-            android:name=".CreateNotesActivity"
+            android:name="com.example.pt_assistant.CreateNotesActivity"
             android:label="@string/title_activity_create_notes"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.example.pt_assistant.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
         <activity
-            android:name=".SubjectiveNotesActivity"
+            android:name="com.example.pt_assistant.SubjectiveNotesActivity"
             android:label="@string/title_activity_subjective_notes"
-            android:parentActivityName=".CreateNotesActivity" >
+            android:parentActivityName="com.example.pt_assistant.CreateNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.CreateNotesActivity" />
         </activity>
         <activity
-            android:name=".ObjectiveNotesActivity"
+            android:name="com.example.pt_assistant.ObjectiveNotesActivity"
             android:label="@string/title_activity_objective_notes"
-            android:parentActivityName=".CreateNotesActivity" >
+            android:parentActivityName="com.example.pt_assistant.CreateNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.CreateNotesActivity" />
         </activity>
         <activity
-            android:name=".AssessmentNotesActivity"
+            android:name="com.example.pt_assistant.AssessmentNotesActivity"
             android:label="@string/title_activity_assessment_notes"
-            android:parentActivityName=".CreateNotesActivity" >
+            android:parentActivityName="com.example.pt_assistant.CreateNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.CreateNotesActivity" />
         </activity>
         <activity
-            android:name=".PlanNotesActivity"
+            android:name="com.example.pt_assistant.PlanNotesActivity"
             android:label="@string/title_activity_plan_notes"
-            android:parentActivityName=".CreateNotesActivity" >
+            android:parentActivityName="com.example.pt_assistant.CreateNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.CreateNotesActivity" />
         </activity>
         <activity
-            android:name=".TreatmentPlanActivity"
+            android:name="com.example.pt_assistant.TreatmentPlanActivity"
             android:label="@string/title_activity_treatment_plan" >
         </activity>
         <activity
-            android:name=".InjuryLookupActivity"
+            android:name="com.example.pt_assistant.InjuryLookupActivity"
             android:label="@string/title_activity_injury_lookup"
-            android:parentActivityName=".ObjectiveNotesActivity" >
+            android:parentActivityName="com.example.pt_assistant.ObjectiveNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.ObjectiveNotesActivity" />
+        </activity>
+        <activity
+            android:name="com.example.pt_assistant.TrendChartActivity"
+            android:label="@string/title_activity_trend_chart" >
+        </activity>
+        
+        <activity android:name="com.example.pt_assistant.TrendChartGUI" android:label="@string/title_activity_trend_chart_gui">
+        </activity><activity
+            android:name="com.example.pt_assistant.TrendchartmainActivity"
+            android:label="@string/title_activity_trendchartmain" >
         </activity>
     </application>
 
