--- a/PT_Assistant/AndroidManifest.xml
+++ b/PT_Assistant/AndroidManifest.xml
@@ -17,38 +17,41 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/pt_short_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
         <activity
-            android:name="com.example.pt_assistant.MainActivity"
+            android:name="com.example.pt_assistant.SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.pt_assistant.GetPatientActivity"
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".GetPatientActivity"
             android:label="@string/title_activity_display_message"
-            android:parentActivityName="com.example.pt_assistant.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.pt_assistant.CreatePatientActivity"
+            android:name=".CreatePatientActivity"
             android:label="@string/title_record_created_activity"
-            android:parentActivityName="com.example.pt_assistant.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.pt_assistant.PatientListActivity"
+            android:name=".PatientListActivity"
             android:label="@string/pattient_list"
-            android:parentActivityName="com.example.pt_assistant.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
@@ -57,71 +60,71 @@
         <uses-library android:name="android.test.runner" />
 
         <activity
-            android:name="com.example.pt_assistant.TrendReportActivity"
+            android:name=".TrendReportActivity"
             android:label="@string/title_activity_trend_report" >
         </activity>
         <activity
-            android:name="com.example.pt_assistant.CreateNotesActivity"
+            android:name=".CreateNotesActivity"
             android:label="@string/title_activity_create_notes"
-            android:parentActivityName="com.example.pt_assistant.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.pt_assistant.SubjectiveNotesActivity"
+            android:name=".SubjectiveNotesActivity"
             android:label="@string/title_activity_subjective_notes"
-            android:parentActivityName="com.example.pt_assistant.CreateNotesActivity" >
+            android:parentActivityName=".CreateNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.CreateNotesActivity" />
         </activity>
         <activity
-            android:name="com.example.pt_assistant.ObjectiveNotesActivity"
+            android:name=".ObjectiveNotesActivity"
             android:label="@string/title_activity_objective_notes"
-            android:parentActivityName="com.example.pt_assistant.CreateNotesActivity" >
+            android:parentActivityName=".CreateNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.CreateNotesActivity" />
         </activity>
         <activity
-            android:name="com.example.pt_assistant.AssessmentNotesActivity"
+            android:name=".AssessmentNotesActivity"
             android:label="@string/title_activity_assessment_notes"
-            android:parentActivityName="com.example.pt_assistant.CreateNotesActivity" >
+            android:parentActivityName=".CreateNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.CreateNotesActivity" />
         </activity>
         <activity
-            android:name="com.example.pt_assistant.PlanNotesActivity"
+            android:name=".PlanNotesActivity"
             android:label="@string/title_activity_plan_notes"
-            android:parentActivityName="com.example.pt_assistant.CreateNotesActivity" >
+            android:parentActivityName=".CreateNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.CreateNotesActivity" />
         </activity>
         <activity
-            android:name="com.example.pt_assistant.TreatmentPlanActivity"
+            android:name=".TreatmentPlanActivity"
             android:label="@string/title_activity_treatment_plan" >
         </activity>
         <activity
-            android:name="com.example.pt_assistant.InjuryLookupActivity"
+            android:name=".InjuryLookupActivity"
             android:label="@string/title_activity_injury_lookup"
-            android:parentActivityName="com.example.pt_assistant.ObjectiveNotesActivity" >
+            android:parentActivityName=".ObjectiveNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pt_assistant.ObjectiveNotesActivity" />
         </activity>
         <activity
-            android:name="com.example.pt_assistant.TrendChartActivity"
+            android:name=".TrendChartActivity"
             android:label="@string/title_activity_trend_chart" >
         </activity>
-        
-        <activity android:name="com.example.pt_assistant.TrendChartGUI" 
-            android:label="@string/title_activity_trend_chart_gui">
+        <activity
+            android:name=".TrendChartGUI"
+            android:label="@string/title_activity_trend_chart_gui" >
         </activity>
         <activity
-            android:name="com.example.pt_assistant.CreateReportActivity"
+            android:name=".CreateReportActivity"
             android:label="@string/title_activity_create_report" >
         </activity>
     </application>
